# shakespeare-reader

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  biome.json  build.ts  bunfig.toml  debug_failures.txt  dev-server.ts  eslint.config.js  final_output.txt  first_run.txt  full_log.txt  full_output.txt  index.html  last_run.txt  lint_output.txt  output.txt  package-lock.json  package.json  test_output.txt  test_results.txt  tsconfig.json  typecheck_output.txt
.github/workflows/: release-macos.yml
.opencode/commands/: conductor:implement.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/3d_library_parity_20260119/: spec.md
conductor/archive/ai_assistant_overhaul_20260117/: index.md  metadata.json  plan.md
conductor/archive/ai_assistant_robustness_20260118/: metadata.json  plan.md  spec.md
conductor/archive/ai_citations_20260117/: index.md  metadata.json  spec.md
conductor/archive/ai_context_visibility_20260119/: plan.md
conductor/archive/bauhaus_library_20260119/: index.md  plan.md  spec.md
conductor/archive/elevenlabs_tts_20260118/: index.md  metadata.json  spec.md
conductor/archive/fix_toc_and_citations_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/archive/global_refactor_400_20260118/: index.md  metadata.json  spec.md
conductor/pocket-tts/: README.md  bundle.py  pyproject.toml  server.py
conductor/qwen-tts/: README.md  qwen-tts-x86_64-apple-darwin.spec  server.py
scripts/: verify-pocket-tts.ts
src/: App.css  App.tsx  index.css  main.tsx  router.tsx
src-tauri/: .clippy.toml  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sidecar.json
src-tauri/src/: books.rs  db.rs  gutendex.rs  lib.rs  main.rs  openai.rs  pocket.rs  qwen.rs  types.rs
src-tauri/src/db/: mod.rs  postgres.rs  sqlite.rs
src/components/: AppearancePanel.tsx  ReaderLayout.tsx
src/hooks/: LibraryContext.ts  LibraryProvider.tsx  useLibrary.ts
src/lib/: appearance.ts  debug-openai.ts  elevenlabs.ts  gutenberg.ts  gutenbergUtils.ts  openai.ts  qwen-tts.ts  readerHtml.ts  readerTypes.ts  readerUtils.ts  tauri.ts  voiceActing.ts
src/routes/: BookPage.tsx  LibraryPage.tsx  MobiBookPage.tsx  SettingsPage.tsx  ThreeDLibraryPage.tsx  TtsDemoPage.tsx
src/tests/: AppearancePanel.test.tsx  BauhausHeader.test.tsx  BookCard.test.tsx  BookCardMinimal.test.tsx  BookMesh.test.tsx  ChatSidebar.test.tsx  ContextTray.test.tsx  GlobalBauhausColors.test.tsx  LibraryGrid.test.tsx  ReaderLayout.test.tsx  ReaderTopBar.test.tsx  ReadingRoom.test.tsx  SelectionTTS.test.tsx  SettingsAppearance.test.tsx  SettingsPage.test.tsx  SettingsPage_voices.test.tsx  SettingsSidebar.test.tsx  TTSPanel.test.tsx  TTSPanelPhase3.test.tsx  TTSProgressBar.test.tsx  ThreeDLibraryPage.test.tsx  aiContextIntegration.test.ts  appearance.test.ts  audioPlayerEnhanced.test.ts  bookCategories.test.ts  contextStaging.test.tsx  elevenlabs.test.ts  fonts.test.ts  library.test.tsx  libraryStateSharing.test.tsx  navigation.test.ts  navigation.test.tsx  openai.test.ts  pocketSidecar.test.ts  pocketTTSBase64.test.ts  pocketTTSFlowInputs.test.ts  pollution.test.ts  qwenSidecar.test.ts  readerContextVisualization.test.tsx  readerHtml.test.ts  (+13 more)
src/types/: jest-dom.d.ts
tmp/: 1524-h.htm  27761-h.htm
(+180 files in other folders)
